--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,14 +1,9 @@
 @import "~react-image-gallery/styles/css/image-gallery.css";
 body {
 	margin: 0;
-	font-family: "-apple-system", "BlinkMacSystemFont", "Segoe UI", "Roboto",
-		"Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-		sans-serif;
+	font-family: sans-serif, "-apple-system", "BlinkMacSystemFont", "Segoe UI",
+		"Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+		"Helvetica Neue";
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-}
-
-code {
-	font-family: "source-code-pro", "Menlo", "Monaco", "Consolas", "Courier New",
-		monospace;
 }
