Fix: font.css 틀 구현

--- a/client/src/fonts/font.css
+++ b/client/src/fonts/font.css
@@ -1,22 +1,13 @@
 @font-face {
-	/* 사용할 폰트의 이름 */
-	font-family: "BebasNeue", "Birthstone";
-	font-display: fallback;
-
-	/* 
-  src: 사용할 폰트의 위치 및 형식 
-     Safari, Android, iOS => ttf
-     Modern Browsers => woff
-     IE6-IE8 => eot
-  */
+	font-family: "BebasNeue";
 	src: url("BebasNeue-Regular.ttf") format("truetype"),
 		/* url("BebasNeue-Regular.woff") format("woff"), */
 			url("BebasNeue-Regular.eot?iefix") format("embedded-opentype");
+}
+
+@font-face {
+	font-family: "Birthstone";
 	src: url("Birthstone-Regular.ttf") format("truetype"),
 		/* url("Birthstone-Regular.woff") format("woff"), */
 			url("Birthstone-Regular.eot?iefix") format("embedded-opentype");
-
-	/* 사용할 폰트의 기본 스타일 */
-	font-weight: 400;
-	font-style: normal;
 }
