--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,9 @@
 @import "~react-image-gallery/styles/css/image-gallery.css";
 body {
 	margin: 0;
-	font-family: sans-serif, "-apple-system", "BlinkMacSystemFont", "Segoe UI",
-		"Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
-		"Helvetica Neue";
+	font-family: "Birthstone", "Noto Sans KR", sans-serif, "-apple-system",
+		"BlinkMacSystemFont", "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
+		"Fira Sans", "Droid Sans", "Helvetica Neue";
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
