--- a/client/src/fonts/font.css
+++ b/client/src/fonts/font.css
@@ -4,10 +4,44 @@
 		/* url("BebasNeue-Regular.woff") format("woff"), */
 			url("BebasNeue-Regular.eot?iefix") format("embedded-opentype");
 }
-
 @font-face {
 	font-family: "Birthstone";
 	src: url("Birthstone-Regular.ttf") format("truetype"),
 		/* url("Birthstone-Regular.woff") format("woff"), */
 			url("Birthstone-Regular.eot?iefix") format("embedded-opentype");
+}
+@font-face {
+	font-family: "Ephesis";
+	src: url("Ephesis-Regular.ttf") format("truetype"),
+		/* url("Ephesis-Regular.woff") format("woff"), */
+			url("Ephesis-Regular.eot?iefix") format("embedded-opentype");
+}
+@font-face {
+	font-family: "GothicA1";
+	src: url("GothicA1-Black.ttf") format("truetype"),
+		/* url("GothicA1-Black.woff") format("woff"), */
+			url("GothicA1-Black.eot?iefix") format("embedded-opentype");
+}
+@font-face {
+	font-family: "GothicA1-Bold";
+	src: url("GothicA1-Bold.ttf") format("truetype");
+	/* url("GothicA1-Bold.woff") format("woff"), */
+}
+@font-face {
+	font-family: "GothicA1-ExtraBold";
+	src: url("GothicA1-ExtraBold.ttf") format("truetype"),
+		/* url("GothicA1-ExtraBold.woff") format("woff"), */
+			url("GothicA1-ExtraBold.eot?iefix") format("embedded-opentype");
+}
+@font-face {
+	font-family: "GothicA1-ExtraLight";
+	src: url("GothicA1-ExtraLight.ttf") format("truetype"),
+		/* url("GothicA1-ExtraLight.woff") format("woff"), */
+			url("GothicA1-ExtraLight.eot?iefix") format("embedded-opentype");
+}
+@font-face {
+	font-family: "GothicA1-Medium";
+	src: url("GothicA1-Medium.ttf") format("truetype"),
+		/* url("GothicA1-Medium.woff") format("woff"), */
+			url("GothicA1-Medium.eot?iefix") format("embedded-opentype");
 }
